# mqtt-forward

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.rst  mqtt-forward.c
scripts/: run-checkpatch.sh
src/: beacon.c  beacon.h  mqtt-forward.c  protocol.c  protocol.h  session.c  session.h  utils.c  utils.h
test/: run-client-side.sh  run-server-side.sh  setup-client-server.sh  setup-mqtt-docker.sh  start-all.sh  start-mqtt-docker.sh  start-mqtt-forward.sh  teardown.sh  unit_tests.c
test/mosquitto/: docker-compose.yml  generate-certs.sh  mosquitto-secure.conf  mosquitto.conf  run-mosquitto.sh
